--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,41 @@
-<html>
-  <head>
-      <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-      <style>
-          body {
-              width: 100%;
-              height: 100%;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-          }
-      </style>
-  </head>
-  <body>
-      <canvas id="game-of-life-canvas"></canvas>
-      <script src='./bootstrap.js'></script>
-  </body>
+<!doctype html>
+<!--
+.____                           _________               .__
+|    |    ___.__. ____   ____   \_   ___ \___.__._______|__| ____
+|    |   <   |  |/    \ /    \  /    \  \<   |  |\_  __ \  |/    \
+|    |___ \___  |   |  \   |  \ \     \___\___  | |  | \/  |   |  \
+|_______ \/ ____|___|  /___|  /  \______  / ____| |__|  |__|___|  /
+        \/\/         \/     \/          \/\/                    \/
+ -->
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>Lynn Cyrin</title>
+  <meta name="description" content="software engineer \\ programming zealot \\ web application architect">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="canonical" href="lynncyrin.me">
+  <base href="/">
+  <link rel="icon" type="image/x-icon" href="assets/icon.png">
+</head>
+
+<body>
+  <app-root>
+    <div style="text-align: center">
+      <img src="assets/icon.png">
+      <p>loading...</p>
+    </div>
+  </app-root>
+</body>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-46840712-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'UA-46840712-1');
+</script>
+
 </html>
